# continuwuity

./: .dockerignore  .editorconfig  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .typos.toml  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.custom.toml  Cargo.toml  Justfile  LICENSE  Makefile  README.md  README.rst  SECURITY.md  TODO.txt  badge-guru-dev-2026-03-27-b1-presence-b2-federation.json  badge-main-upstream.json  badge-main.json  clippy.toml  complement_test_logs.jsonl  conduwuit-example.toml  conduwuit.toml  engage.toml  flake.nix  format_queries.sql  github-badge.json  import.py  justfile  package-lock.json  package.json  renovate.json  rspress.config.ts  (+9 more)
case-study-state-res/compare/: Cargo.toml  parse_jsonl.py
case-study-state-res/compare/src/: check_ids.rs  main.rs
case-study-state-res/compare/tests/: upstream_it.rs
src/build_metadata/: Cargo.toml  build.rs  mod.rs
src/build_metadata/src/: git.rs
src/macros/: Cargo.toml  admin.rs  build_info.rs  config.rs  debug.rs  mod.rs  utils.rs
src/main/: Cargo.toml  attach.rs  build.rs  clap.rs  logging.rs  main.rs  mod.rs  mods.rs  panic.rs  runtime.rs  sentry.rs  server.rs
src/oidc/: Cargo.toml  authorize.rs  consent.rs  login.rs  mod.rs  request.rs  response.rs  revoke.rs  solicitor.rs  token.rs
src/oidc/endpoint/: device_store.rs  endpoint.rs  issuer.rs  mod.rs  registrar.rs  solicitor.rs
src/oidc/flows/: authorize.rs  login.rs  mod.rs  revoke.rs  token.rs
src/oidc/flows/css/: index.css
src/oidc/templates/: _layout.html.j2  consent.html.j2
src/ruminuwuity/: Cargo.toml  invite_permission_config.rs  mod.rs
src/ruminuwuity/admin/: get_suspended.rs  mod.rs  set_suspended.rs
src/ruminuwuity/draupnir_antispam/: mod.rs  user_may_invite.rs  user_may_join_room.rs
src/ruminuwuity/meowlnir_antispam/: accept_make_join.rs  mod.rs  user_may_invite.rs  user_may_join_room.rs
src/ruminuwuity/policy/: event.rs  mod.rs  policy_check.rs  policy_sign.rs
src/service/: Cargo.toml  manager.rs  migrations.rs  mod.rs  moderation.rs  service.rs  services.rs  test_interfix.rs
src/service/account_data/: mod.rs
src/service/admin/: console.rs  create.rs  execute.rs  grant.rs  mod.rs
src/service/announcements/: mod.rs
src/service/antispam/: mod.rs
src/service/appservice/: mod.rs
src/service/client/: mod.rs
src/service/config/: mod.rs
src/service/emergency/: mod.rs
src/service/federation/: execute.rs  mod.rs
src/service/firstrun/: mod.rs
src/service/globals/: data.rs  mod.rs
src/service/key_backups/: mod.rs
src/service/mailer/: messages.rs  mod.rs
src/service/media/: blurhash.rs  data.rs  mod.rs  mxc.rs  preview.rs  remote.rs  tests.rs  thumbnail.rs
src/service/oauth/: client_metadata.rs  grant.rs  mod.rs
src/service/oidc/: device_store.rs  mod.rs  registrar.rs
src/service/oidc/endpoint/: issuer.rs  mod.rs  registrar.rs
src/service/password_reset/: data.rs  mod.rs
src/service/presence/: data.rs  mod.rs  presence.rs
src/service/pusher/: mod.rs
src/service/registration_tokens/: data.rs  mod.rs
src/service/resolver/: actual.rs  cache.rs  dns.rs  fed.rs  mod.rs  tests.rs  well_known.rs
src/service/rooms/: auth_adapter.rs  mod.rs  monitor.rs
src/service/rooms/alias/: mod.rs  remote.rs
src/service/rooms/auth_chain/: data.rs  mod.rs
src/service/rooms/delayed_events/: mod.rs  submission_queue.rs
src/service/rooms/directory/: mod.rs
src/service/rooms/event_handler/: acl_check.rs  extremities.rs  fetch_and_handle_outliers.rs  fetch_auth.rs  fetch_prev.rs  fetch_state.rs  handle_incoming_pdu.rs  handle_outlier_pdu.rs  handle_prev_pdu.rs  healer.rs  mod.rs  parse_incoming_pdu.rs  pdu_checks.rs  policy_server.rs  pre_fetch_state_res_deps.rs  resolve_state.rs  server_pool.rs  state_at_incoming.rs  unroll_rejected_prev_events.rs  upgrade_outlier_pdu.rs
src/service/rooms/lazy_loading/: mod.rs
src/service/rooms/membership/: mod.rs
src/service/rooms/metadata/: mod.rs
src/service/rooms/outlier/: mod.rs
src/service/rooms/pdu_metadata/: bundled_aggregations.rs  data.rs  mod.rs
src/service/rooms/ratelimiter/: mod.rs
src/service/rooms/read_receipt/: data.rs  mod.rs
src/service/rooms/search/: mod.rs
src/service/rooms/short/: mod.rs
src/service/rooms/spaces/: mod.rs  tests.rs
src/service/rooms/state/: mod.rs
src/service/rooms/state_accessor/: mod.rs  room_state.rs  server_can.rs  state.rs  user_can.rs
src/service/rooms/state_cache/: mod.rs  serde_test3.rs  update.rs  via.rs
src/service/rooms/state_compressor/: mod.rs
src/service/rooms/state_partial/: mod.rs  resync.rs
src/service/rooms/summary/: mod.rs
src/service/rooms/threads/: mod.rs
src/service/rooms/timeline/: append.rs  backfill.rs  batch.rs  build.rs  bumper.rs  create.rs  data.rs  data.rs.orig  extremities.rs  heal.rs  helpers.rs  metadata.rs  mod.rs  rebuild_state.rs  redact.rs  reindex.rs  reorder.rs  repair_unsigned.rs  state.rs
src/service/rooms/typing/: mod.rs
src/service/rooms/user/: mod.rs
src/service/sending/: antispam.rs  appservice.rs  data.rs  dest.rs  mod.rs  sender.rs  stats.rs
src/service/server_keys/: acquire.rs  bindings.rs  get.rs  keypair.rs  mod.rs  request.rs  sign.rs  util.rs  validate.rs  verify.rs  verify_libsodium.rs
src/service/sync/: mod.rs  watch.rs
src/service/templates/: welcome.md
src/service/templates/mail/: _base.txt  change_email.txt  (+3 more)
src/service/threepid/: mod.rs  session.rs
src/service/transactions/: mod.rs
src/service/uiaa/: mod.rs
src/service/users/: account.rs  dehydrated_device.rs  device.rs  filters.rs  keys.rs  mod.rs  profile.rs  remote.rs
src/web/: Cargo.toml  askama.toml  build.rs  extract.rs  mod.rs  oidc.rs
src/web/oidc/: authorize.rs  consent.rs  error.rs  login.rs  request.rs  response.rs  token.rs
src/web/pages/: about.rs  debug.rs  index.rs  mod.rs  password_reset.rs  resources.rs  threepid.rs
src/web/session/: mod.rs  store.rs
src/web/templates/: _layout.html.j2  consent.html.j2  index.html.j2  login.html.j2
xtask/: Cargo.toml
(+10174 files in other folders)
