[package]
name = "xtask"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
conduwuit-admin.workspace = true
conduwuit.workspace = true
clap.workspace = true

askama.workspace = true
cargo_metadata = "0.23.1"

[lints]
workspace = true
