[package]
name = "compare"
version = "0.1.0"
edition = "2024"

[dependencies]
conduwuit_core = { path = "../../src/core" }
ruma = { git = "https://forgejo.ellis.link/continuwuation/ruwuma", rev = "d00b51a8669b21689c4eb47fb81f3a8b27c3e371", features = ["unstable-pdu"] }
rezzy = { git = "https://github.com/gamesguru/rezzy", rev = "7e1893aee73e2a424b7beab23679085eda7dfb38" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std", "tracing", "tracing-log", "ansi", "fmt"] }
