[package]
name = "conduwuit_build_metadata"
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


build = "build.rs"

[[bin]]
name = "conduwuit-version"
path = "src/bin/version.rs"

[lib]
path = "mod.rs"
crate-type = [
    "rlib",
    # "dylib",
]

[features]


[dependencies]

[build-dependencies]
built = { version = "0.8", features = [] }

[lints]
workspace = true
