[package]
name = "conduwuit_service"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "mod.rs"
crate-type = [
	"rlib",
#	"dylib",
]

[features]
blurhashing = [
	"dep:image",
	"dep:blurhash",
]
brotli_compression = [
	"conduwuit-core/brotli_compression",
	"reqwest/brotli",
]
console = [
	"dep:rustyline-async",
	"dep:termimad",
]
element_hacks = []
gzip_compression = [
	"conduwuit-core/gzip_compression",
	"reqwest/gzip",
]
http3 = [
	"conduwuit-core/http3",
]
io_uring = [
	"conduwuit-database/io_uring",
]
jemalloc = [
	"conduwuit-core/jemalloc",
	"conduwuit-database/jemalloc",
]
jemalloc_conf = [
	"conduwuit-core/jemalloc_conf",
	"conduwuit-database/jemalloc_conf",
]
jemalloc_prof = [
	"conduwuit-core/jemalloc_prof",
	"conduwuit-database/jemalloc_prof",
]
jemalloc_stats = [
	"conduwuit-core/jemalloc_stats",
	"conduwuit-database/jemalloc_stats",
]
ldap = [
    "dep:ldap3"
]
media_thumbnail = [
	"dep:image",
]
release_max_log_level = [
	"conduwuit-core/release_max_log_level",
	"conduwuit-database/release_max_log_level",
	"log/max_level_trace",
	"log/release_max_level_info",
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
]
systemd = [
	"dep:sd-notify",
]
url_preview = [
	"dep:image",
	"dep:webpage",
]
zstd_compression = [
	"conduwuit-core/zstd_compression",
	"conduwuit-database/zstd_compression",
    "reqwest/zstd",
]

[dependencies]
askama.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
conduwuit-core.workspace = true
conduwuit-database.workspace = true
conduwuit-macros.workspace = true
const-str.workspace = true

either.workspace = true
futures.workspace = true
hickory-resolver.workspace = true
http.workspace = true
image.workspace = true
image.optional = true
ipaddress.workspace = true
itertools.workspace = true
ldap3.workspace = true
ldap3.optional = true
log.workspace = true
loole.workspace = true
lru-cache.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
ruma.workspace = true
rustyline-async.workspace = true
rustyline-async.optional = true
serde_json.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
sha2.workspace = true
termimad.workspace = true
termimad.optional = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
webpage.workspace = true
webpage.optional = true
blurhash.workspace = true
blurhash.optional = true
recaptcha-verify = { version = "0.1.5", default-features = false }
yansi.workspace = true

[target.'cfg(all(unix, target_os = "linux"))'.dependencies]
sd-notify.workspace = true
sd-notify.optional = true

[lints]
workspace = true
